--- a/index.html
+++ b/index.html
@@ -11,10 +11,8 @@
       http-equiv="X-Content-Security-Policy"
       content="default-src 'self'; script-src 'self'"
     />
-    <title>Hello from Electron renderer!</title>
+    <title>Karakuri Hitbox Editor</title>
   </head>
   <body>
-    <h1>Hello from Electron renderer!</h1>
-    <p>👋</p>
   </body>
 </html>
