--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Karakuri Hitbox Editor</title>
   </head>
   <body>
-    <img id="frameContainer" src=""/>
-    <script src="./renderer.js"></script>
+    <div id="top">
+      <h1>Top Section</h1>
+    </div>
+    <div id="middle">
+      <img id="frameContainer" src=""/>
+    </div>
+    <div id="button">
+      <button>Button Section</button>
+    </div>
   </body>
+  <script src="./renderer.js"></script>
 </html>
