Can now go through all the frames in animation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
       <img id="frameContainer" src=""/>
     </div>
     <div id="button">
-      <button>Button Section</button>
+      <button id="decrement-btn">Left</button>
+      <button id="increment-btn">Right</button>
+      <button>Zoom In</button>
+      <button>Zoon Out</button>
     </div>
   </body>
   <script src="./renderer.js"></script>
