--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
       <h1>Top Section</h1>
     </div>
     <div id="middle">
-      <img id="frameContainer" src=""/>
+      <canvas id="frameImage">Frame Image</canvas>
     </div>
     <div id="button">
       <button id="decrement-btn">Left</button>
       <button id="increment-btn">Right</button>
-      <button>Zoom In</button>
-      <button>Zoon Out</button>
+      <button onclick="zoomIn()">Zoom In</button>
+      <button onclick="zoomOut()">Zoom Out</button>
     </div>
   </body>
+  <script src="./zoom.js"></script> 
   <script src="./renderer.js"></script>
 </html>
