--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
       <h1>Top Section</h1>
     </div>
     <div id="middle">
-      <canvas id="frameImage">Frame Image</canvas>
+      <canvas id="frameImage" width="600" height="600">Frame Image</canvas>
     </div>
     <div id="button">
       <button id="decrement-btn">Left</button>
       <button id="increment-btn">Right</button>
-      <button onclick="zoomIn()">Zoom In</button>
-      <button onclick="zoomOut()">Zoom Out</button>
+      <button onclick="ZoomIn()">Zoom In</button>
     </div>
   </body>
-  <script src="./zoom.js"></script> 
+  <script src="./zoom.js"></script>
   <script src="./renderer.js"></script>
 </html>
