Added basic zoom functionality

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
       <h1>Top Section</h1>
     </div>
     <div id="middle">
-      <canvas id="frameImage" width="600" height="600">Frame Image</canvas>
+      <canvas id="frameImage" width="800" height="800">Frame Image</canvas>
     </div>
     <div id="button">
       <button id="decrement-btn">Left</button>
       <button id="increment-btn">Right</button>
       <button onclick="ZoomIn()">Zoom In</button>
+      <button onclick="ZoomOut()">Zoom Out</button>
+      <button onclick="DefaultSize()">Default Size</button>
     </div>
   </body>
   <script src="./zoom.js"></script>
