--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   </head>
   <body>
     <div id="top">
-      <h1>Top Section</h1>
+      <button onclick="IsDrawing()">Draw Box</button>
+      <button onclick="IsSelecting()" >Select Box</button>
     </div>
     <div id="middle">
-      <canvas id="frameImage" width="800" height="800">Frame Image</canvas>
+      <canvas id="frameImage" width=800 height=700>Frame Image</canvas>
+      <canvas id="overlay" width=800 height=700></canvas>
+      <canvas id="canvas" width=800 height=700></canvas>
     </div>
     <div id="button">
       <button id="decrement-btn">Left</button>
@@ -21,5 +24,6 @@
     </div>
   </body>
   <script src="./zoom.js"></script>
+  <script src="./hitbox.js"></script>
   <script src="./renderer.js"></script>
 </html>
