--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="top">
       <button onclick="IsDrawing()">Draw Box</button>
       <button onclick="IsSelecting()" >Select Box</button>
+      <button onclick="Delete()" >Delete Box</button>
     </div>
     <div id="middle">
       <canvas id="frameImage" width=800 height=700>Frame Image</canvas>
