--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
       <button onclick="IsDrawing()">Draw Box</button>
       <button onclick="IsSelecting()" >Select Box</button>
       <button onclick="Delete()" >Delete Box</button>
+
+      <label for="x">X:</label>
+      <input type="text" id="x" name="x">
+      <label for="y">Y:</label>
+      <input type="text" id="y" name="y">
+
+      <label for="width">Width:</label>
+      <input type="text" id="width" name="width">
+      <label for="height">Height:</label>
+      <input type="text" id="height" name="height">
     </div>
     <div id="middle">
       <canvas id="frameImage" width=800 height=700>Frame Image</canvas>
