--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
       <button onclick="IsSelecting()" >Select Box</button>
       <button onclick="Delete()" >Delete Box</button>
 
+      <button onclick="HitboxSelect()">Hitbox</button>
+      <button onclick="HurtboxSelect()">Hurtbox</button>
+      <button onclick="ColliderboxSelect()">Colliderbox</button>
+
       <label for="x">X:</label>
       <input type="text" id="x" name="x">
       <label for="y">Y:</label>
